--- a/src/main/resources/templates/bishnu/login_page1.html
+++ b/src/main/resources/templates/bishnu/login_page1.html
@@ -26,7 +26,7 @@
 <div class="mb-3">
    <label for="firstName_field">First Name:</label>
    <div class="form-group" th:classappend="${#fields.hasErrors('firstName')} ? 'has-error'">
-   <input type="text" class="form-control" name="firstName" id="firstName_field" th:value="${firstName}" th:field="*{firstName}" placeholder="Enter your firstName..." >
+   <input type="text"  onkeypress="return changeToUpperCase(event,this)" class="form-control" name="firstName" id="firstName_field" th:value="${firstName}" th:field="*{firstName}" placeholder="Enter your firstName..." >
 <span class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
 </div>
 </div>
@@ -34,7 +34,7 @@
 <div class="mb-3">
    <label for="lastName_field">Last Name:</label>
    <div class="form-group" th:classappend="${#fields.hasErrors('lastName')} ? 'has-error'">
-   <input type="text" class="form-control" name="lastName" id="lastName_field" th:value="${lastName}" th:field="*{lastName}"  placeholder="Enter your lastName..." >
+   <input type="text"  onkeypress="return changeToUpperCase(event,this)" class="form-control" name="lastName" id="lastName_field" th:value="${lastName}" th:field="*{lastName}"  placeholder="Enter your lastName..." >
 <span class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
 </div>
 </div>
