--- a/src/main/resources/templates/bishnu/login_success_page.html
+++ b/src/main/resources/templates/bishnu/login_success_page.html
@@ -15,6 +15,10 @@ th:replace="index::layout(~{::section})">
 <h3 class="font-weight-bold" style="text-align:center">LOGIN FORM SUCCESS OF SSB CARD</h3>
 <h4 style="text-align:center">基本情報登録完了画面</h4><br>
 
+<div style="text-align:center; background-color:blue; color:red;"  >
+<h2 th:text="' 発行されたカード番号 ： ' + ${bishnuDto.cardNumber} + ' です。'"></h2>
+</div>
+
 <div th:if="${message}">
 <p th:text="${message}" class="p-3 mb-2 bg-danger text-white"></p>
 </div>
