--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" th:href="@{/css/style.css}" />
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<!-- Address fetch APi -->
+	<script src="https://cdn.jsdelivr.net/npm/fetch-jsonp@1.1.3/build/fetch-jsonp.min.js"></script>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -126,5 +128,7 @@
 		crossorigin="anonymous"></script>
 	<script th:src="@{/js/script.js}"></script>
 	<script th:src="@{/js/timeScript.js}"></script>
+	<script th:src="@{/js/bishnu/addressApi.js}"></script>
+	<script th:src="@{/js/bishnu/romaji.js}"></script>
 </body>
 </html>
