--- a/src/main/resources/templates/sujan/login/userHome.html
+++ b/src/main/resources/templates/sujan/login/userHome.html
@@ -10,25 +10,18 @@ th:replace="sujan/common/common::layout(~{::section})">
 	rel="stylesheet">
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-<title>login</title>
-<meta charset="UTF-8">
-<title>顧客一覧</title>
-
+<title>user</title>
 </head>
 <body class=" bg-light">
 	<div class="container-fluid ">
 	
 	<p class="text-end ">
 	<a   class="btn btn-primary" type="button"  th:href="@{sujan/login}">ログアウト </a></p>
-							
-		<h2 class ="text-danger text-left">
-				<span th:text="${message}"></span>
-			</h2>
 			
 	</div>
 	     <hr>
-        <h1 class="my-2">顧客一覧</h1>
-        <table class="table table-borderd table-striped">
+        <h1 class="my-2">こんにちは</h1>
+        <!-- <table class="table table-borderd table-striped">
             <tr>
                 <th>ID</th>
                 <th>名前</th>
@@ -49,7 +42,7 @@ th:replace="sujan/common/common::layout(~{::section})">
                      <td><a th:href="@{{id}(id=*{customer.id})}" class="btn btn-secondary">詳細</a></td>
                 </td>
             </tr>
-        </table>
+        </table> -->
     
 </body>
 </section>
